[gd_scene load_steps=19 format=2]

[ext_resource path="res://Textures/Gun.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/PlayerKin.gd" type="Script" id=2]
[ext_resource path="res://Textures/Pointer.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/Pointer.gd" type="Script" id=4]
[ext_resource path="res://Sounds/SHOOT_Long.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Hurt3.ogg" type="AudioStream" id=6]
[ext_resource path="res://Textures/Player.png" type="Texture" id=7]
[ext_resource path="res://Textures/PlantIndicator.png" type="Texture" id=8]
[ext_resource path="res://Textures/Bullet.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Player/Camera2D.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Player/Gun.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, -0.509091, 0, 1, Vector2( 1, 0.490909 ), -0.509091, 0.0, 1, 0 ]

[sub_resource type="Animation" id=3]
resource_name = "Fire"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 72.0

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.249143 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=7]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 6
collision_layer = 2
script = ExtResource( 2 )
accuracy = 5.0
fire_rate = 0.4

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 20.0
script = ExtResource( 10 )
target = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0.0394172, -0.0131387 )
texture = ExtResource( 7 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( -2, 4 )
z_index = 5
texture = ExtResource( 1 )
script = ExtResource( 11 )

[node name="Barrel" type="Node2D" parent="Gun"]
position = Vector2( 6, -4 )

[node name="Flare" type="CPUParticles2D" parent="Gun/Barrel"]
position = Vector2( 2.5, 0 )
emitting = false
amount = 15
lifetime = 0.1
explosiveness = 1.0
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color = Color( 1, 0.960784, 0, 1 )
hue_variation = 0.08
hue_variation_random = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun"]
autoplay = "Idle"
anims/Fire = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Pointers" type="Node2D" parent="."]
z_index = 10

[node name="Pointer1" type="Node2D" parent="Pointers" groups=[
"pointers",
]]
visible = false
show_behind_parent = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Pointers/Pointer1"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="Pointer2" type="Node2D" parent="Pointers" groups=[
"pointers",
]]
visible = false
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Pointers/Pointer2"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="Pointer3" type="Node2D" parent="Pointers" groups=[
"pointers",
]]
visible = false
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Pointers/Pointer3"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="Pointer4" type="Node2D" parent="Pointers" groups=[
"pointers",
]]
visible = false
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Pointers/Pointer4"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="Pointer5" type="Node2D" parent="Pointers" groups=[
"pointers",
]]
visible = false
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Pointers/Pointer5"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="PlantRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlantRange"]
shape = SubResource( 5 )

[node name="PlantNotifier" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
z_index = 15
texture = ExtResource( 8 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlantNotifier"]
autoplay = "Plant"
anims/Plant = SubResource( 6 )

[node name="SlowRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowRange"]
shape = SubResource( 7 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Hurt" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.352941 )
position = Vector2( -2.38419e-07, 8 )
scale = Vector2( 2.66667, 1 )
texture = ExtResource( 9 )

[connection signal="body_entered" from="PlantRange" to="." method="_on_PlantRange_body_entered"]
[connection signal="body_exited" from="PlantRange" to="." method="_on_PlantRange_body_exited"]
